# target-google-sheets

./: .gitignore  README.md  config.sample.json  pyproject.toml  target_google_sheets.py  target_gspread.py
.secrets/: .gitignore
target_google_sheets/: exceptions.py  main.py  models.py  utils.py
