[tool.poetry]
name = "target-google-sheets"
version = "0.1.0"
description = "A singer target for google sheets using gspread"
authors = ["0xMochan <mochanbot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^5.4.0"
singer-python = "^5.12.2"
jsonschema = "2.6.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"
black = "^22.6.0"
isort = "^5.10.1"
ipython = "^8.4.0"

[tool.poetry.scripts]
target-google-sheets = "target_google_sheets:main"

[tool.poe.tasks]
format = { shell = "isort .; black ."}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
